# myplugin-ui

./: Install.rst  README.rst  setup.cfg
myplugin_ui/content/mypanel/: panel.py  urls.py  views.py
myplugin_ui/content/mypanel/templates/mypanel/: index.html
myplugin_ui/enabled/: _31000_myplugin.py
myplugin_ui/static/dashboard/identity/myplugin/mypanel/: mypanel.html  mypanel.js
